# code-panda

./: .gitignore  LICENSE  README.md  check.sh  cp.code-workspace  docker-compose.yml
cp-agent/: .dockerignore  .env.development.example  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
cp-agent/cp_agent/: __init__.py  config.py  main.py  run.py
cp-agent/cp_agent/agents/: base.py
cp-agent/cp_agent/agents/coder/: agent.py  event_bus.py  hooks.py  message_manager.py  prompts.py  state_manager.py  stream_processor.py  tool_executor.py
cp-agent/cp_agent/agents/searcher/: agent.py  prompts.py
cp-agent/cp_agent/api/v1/: __init__.py  chat.py  projects.py
cp-agent/cp_agent/context/: __init__.py  context_enricher.py  supabase.py
cp-agent/cp_agent/kb/: __init__.py  cli.py  kb_manager.py  vector_store.py
cp-agent/cp_agent/projects/: manager.py
cp-agent/cp_agent/schemas/: chat.py  projects.py
cp-agent/cp_agent/storage/: file_operation_manager.py
cp-agent/cp_agent/types/: __init__.py  assistant_message.py
cp-agent/cp_agent/utils/: agent_helpers.py  code_checks.py  dependency_management.py  format_response.py  merge_diff.py  message_formats.py  project_paths.py  project_summary.py  runner_client.py  snapshot.py  supabase_utils.py
cp-agent/e2e/: test_merge_diff.py  test_searcher_agent.py
cp-agent/tests/: conftest.py  test_assistant_message.py  test_context_enricher.py  test_file_operation_manager.py  test_list_store.py  test_project_paths.py
cp-runner/: .air.toml  .dockerignore  .env.development.example  .gitignore  Dockerfile  Dockerfile.dev  (+3 more)
(+106 files in other folders)
